--- a/src/login/LoginScreen.fxml
+++ b/src/login/LoginScreen.fxml
@@ -4,21 +4,12 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="errorLabel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-  minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1"
-  xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginScreenController">
+<AnchorPane id="AnchorPane" fx:id="backPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@LoginStyle.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginScreenController">
   <children>
-    <TextField fx:id="usernameText" layoutX="69.0" layoutY="86.0" prefHeight="35.0"
-      prefWidth="212.0" promptText="Username"/>
-    <TextField fx:id="passwordText" layoutX="69.0" layoutY="135.0" prefHeight="35.0"
-      prefWidth="212.0" promptText="Password"/>
-    <Button fx:id="loginButton" layoutX="133.0" layoutY="183.0" mnemonicParsing="false"
-      onAction="#pressedLogin" prefHeight="35.0" prefWidth="85.0" text="Login"/>
-    <VBox layoutX="378.0" prefHeight="400.0" prefWidth="222.0"
-      style="-fx-background-color: lightgrey;"/>
-    <Label layoutX="67.0" layoutY="240.0" text="ERROR! Incorrect Username or Password!"
-      textFill="RED"/>
+    <TextField fx:id="usernameText" layoutX="69.0" layoutY="86.0" prefHeight="35.0" prefWidth="212.0" promptText="Username" />
+    <TextField fx:id="passwordText" layoutX="69.0" layoutY="135.0" prefHeight="35.0" prefWidth="212.0" promptText="Password" />
+    <Button fx:id="loginButton" layoutX="133.0" layoutY="183.0" mnemonicParsing="false" onAction="#pressedLogin" prefHeight="35.0" prefWidth="85.0" text="Login" />
+    <Label fx:id="errorLabel" layoutX="67.0" layoutY="240.0" text="ERROR! Incorrect Username or Password!" textFill="RED" />
   </children>
 </AnchorPane>
