implemented database into login screen. swithces to the mainScreen scene.

--- a/src/login/LoginScreen.fxml
+++ b/src/login/LoginScreen.fxml
@@ -4,13 +4,16 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
-<AnchorPane id="AnchorPane" fx:id="backPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@LoginStyle.css" xmlns="http://javafx.com/javafx/8.0.201" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginScreenController">
+<?import javafx.scene.control.PasswordField?>
+<AnchorPane id="AnchorPane" fx:id="backPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@LoginStyle.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginScreenController">
   <children>
-    <TextField fx:id="usernameText" layoutX="69.0" layoutY="86.0" prefHeight="35.0" prefWidth="212.0" promptText="Username" />
-    <TextField fx:id="passwordText" layoutX="69.0" layoutY="135.0" prefHeight="35.0" prefWidth="212.0" promptText="Password" />
-    <Button fx:id="loginButton" layoutX="133.0" layoutY="183.0" mnemonicParsing="false" onAction="#pressedLogin" prefHeight="35.0" prefWidth="85.0" text="Login" />
-    <Label fx:id="errorLabel" layoutX="67.0" layoutY="240.0" text="ERROR! Incorrect Username or Password!" textFill="RED" visible="false" />
-      <Label fx:id="logginLabel" layoutX="134.0" layoutY="240.0" text="User Logged In!" textFill="GREEN" visible="false" />
+    <TextField fx:id="usernameText" layoutX="33.0" layoutY="52.0" prefHeight="35.0" prefWidth="212.0" promptText="Username" />
+    <PasswordField fx:id="passwordText" layoutX="33.0" layoutY="107.0" prefHeight="35.0" prefWidth="212.0" promptText="Password" />
+    <Button fx:id="loginButton" layoutX="97.0" layoutY="175.0" mnemonicParsing="false" onAction="#pressedLogin" prefHeight="35.0" prefWidth="85.0" text="Login" />
+    <Label fx:id="errorLabel" layoutX="31.0" layoutY="231.0" text="ERROR! Incorrect Username or Password!" textFill="RED" visible="false" />
+      <Label fx:id="logginLabel" layoutX="99.0" layoutY="231.0" text="User Logged In!" textFill="GREEN" visible="false" />
+      <Pane id="Pane" layoutX="276.0" prefHeight="400.0" prefWidth="324.0" />
   </children>
 </AnchorPane>
