--- a/src/login/LoginScreen.fxml
+++ b/src/login/LoginScreen.fxml
@@ -2,18 +2,30 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.PasswordField?>
-<AnchorPane id="AnchorPane" fx:id="backPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@LoginStyle.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginScreenController">
+<AnchorPane id="AnchorPane" fx:id="backPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="298.0" prefWidth="676.0" stylesheets="@LoginStyle.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginScreenController">
   <children>
     <TextField fx:id="usernameText" layoutX="33.0" layoutY="52.0" prefHeight="35.0" prefWidth="212.0" promptText="Username" />
     <PasswordField fx:id="passwordText" layoutX="33.0" layoutY="107.0" prefHeight="35.0" prefWidth="212.0" promptText="Password" />
     <Button fx:id="loginButton" layoutX="97.0" layoutY="175.0" mnemonicParsing="false" onAction="#pressedLogin" prefHeight="35.0" prefWidth="85.0" text="Login" />
-    <Label fx:id="errorLabel" layoutX="31.0" layoutY="231.0" text="ERROR! Incorrect Username or Password!" textFill="RED" visible="false" />
+    <Label fx:id="errorLabel" layoutX="31.0" layoutY="231.0" text="ERROR! Incorrect Username or Password!" textFill="#f6201f"
+      visible="false" />
       <Label fx:id="logginLabel" layoutX="99.0" layoutY="231.0" text="User Logged In!" textFill="GREEN" visible="false" />
-      <Pane id="Pane" layoutX="276.0" prefHeight="400.0" prefWidth="324.0" />
+      <Pane id="Pane" layoutX="278.0" prefHeight="298.0" prefWidth="397.0" />
+      <Label layoutX="59.0" layoutY="1.0" text="Enter your username" textFill="WHITE">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="84.0" layoutY="25.0" text="and password" textFill="WHITE">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
   </children>
 </AnchorPane>
