--- a/src/login/LoginStyle.css
+++ b/src/login/LoginStyle.css
@@ -1,10 +1,8 @@
 #Pane {
   -fx-background-image: url("https://cdn2.thedogapi.com/images/qBYpfkZr1.jpg");
-  -fx-background-size: cover;
+  -fx-background-size: contain;
+  -fx-scale-x: -1;
 }
 #AnchorPane {
   -fx-background-color: "#564D65";
-}
-#errorLabel {
-
 }
