--- a/src/animalProfile/AnimalProfile.fxml
+++ b/src/animalProfile/AnimalProfile.fxml
@@ -10,16 +10,15 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="578.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="603.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-    <Pane layoutX="55.0" layoutY="57.0" prefHeight="164.0" prefWidth="188.0" style="-fx-background-color: grey;" AnchorPane.bottomAnchor="357.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="388.0" AnchorPane.topAnchor="57.0" />
-    <GridPane layoutX="250.0" layoutY="57.0" prefHeight="164.0" prefWidth="300.0" AnchorPane.rightAnchor="50.0">
+    <Pane layoutX="55.0" layoutY="57.0" prefHeight="164.0" prefWidth="240.0" style="-fx-background-color: grey;" AnchorPane.bottomAnchor="382.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="410.0" AnchorPane.topAnchor="57.0" />
+    <GridPane layoutX="356.0" layoutY="57.0" prefHeight="164.0" prefWidth="300.0" AnchorPane.rightAnchor="44.0">
       <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.0" minWidth="10.0" prefWidth="83.0" />
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="228.0" minWidth="10.0" prefWidth="217.0" />
       </columnConstraints>
       <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -50,57 +49,44 @@
             <Font name="Times New Roman Bold" size="14.0" />
           </font>
         </Label>
-        <Label text="Birthday :" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+        <Label fx:id="animNameLb" text="No data" GridPane.columnIndex="1" GridPane.halignment="LEFT">
+          <font>
+            <Font name="Times New Roman" size="14.0" />
+          </font>
+          <GridPane.margin>
+            <Insets left="10.0" />
+          </GridPane.margin>
+        </Label>
+        <Label fx:id="animSpeciesLb" text="No data" GridPane.columnIndex="1" GridPane.rowIndex="1">
+          <font>
+            <Font name="Times New Roman" size="14.0" />
+          </font>
+          <GridPane.margin>
+            <Insets left="10.0" />
+          </GridPane.margin>
+        </Label>
+        <Label fx:id="animBreedLb" text="No data" GridPane.columnIndex="1" GridPane.rowIndex="2">
+          <font>
+            <Font name="Times New Roman" size="14.0" />
+          </font>
+          <GridPane.margin>
+            <Insets left="10.0" />
+          </GridPane.margin>
+        </Label>
+        <Label fx:id="AnimGenderLb" text="No data" GridPane.columnIndex="1" GridPane.rowIndex="3">
+          <font>
+            <Font name="Times New Roman" size="14.0" />
+          </font>
+          <GridPane.margin>
+            <Insets left="10.0" />
+          </GridPane.margin>
+        </Label>
+        <Label text="ID :" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
           <font>
             <Font name="Times New Roman Bold" size="14.0" />
           </font>
         </Label>
-        <Label fx:id="AnimNameLb" text="Unknown Name" GridPane.columnIndex="1" GridPane.halignment="LEFT">
-          <font>
-            <Font name="Times New Roman" size="14.0" />
-          </font>
-          <GridPane.margin>
-            <Insets left="10.0" />
-          </GridPane.margin>
-        </Label>
-        <Label fx:id="animSpecLb" text="Unknown Species" GridPane.columnIndex="1" GridPane.rowIndex="1">
-          <font>
-            <Font name="Times New Roman" size="14.0" />
-          </font>
-          <GridPane.margin>
-            <Insets left="10.0" />
-          </GridPane.margin>
-        </Label>
-        <Label text="Unkown Breed" GridPane.columnIndex="1" GridPane.rowIndex="2">
-          <font>
-            <Font name="Times New Roman" size="14.0" />
-          </font>
-          <GridPane.margin>
-            <Insets left="10.0" />
-          </GridPane.margin>
-        </Label>
-        <Label text="Unkown Gender" GridPane.columnIndex="1" GridPane.rowIndex="3">
-          <font>
-            <Font name="Times New Roman" size="14.0" />
-          </font>
-          <GridPane.margin>
-            <Insets left="10.0" />
-          </GridPane.margin>
-        </Label>
-        <Label text="Unknown Age" GridPane.columnIndex="1" GridPane.rowIndex="4">
-          <font>
-            <Font name="Times New Roman" size="14.0" />
-          </font>
-          <GridPane.margin>
-            <Insets left="10.0" />
-          </GridPane.margin>
-        </Label>
-        <Label text="ID :" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
-          <font>
-            <Font name="Times New Roman Bold" size="14.0" />
-          </font>
-        </Label>
-        <Label text="Unknown ID" GridPane.columnIndex="1" GridPane.rowIndex="5">
+        <Label fx:id="animIDLb" text="No data" GridPane.columnIndex="1" GridPane.rowIndex="4">
           <font>
             <Font name="Times New Roman" size="14.0" />
           </font>
@@ -110,12 +96,12 @@
         </Label>
       </children>
     </GridPane>
-    <GridPane layoutX="55.0" layoutY="265.0" prefHeight="233.0" prefWidth="700.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0">
+    <GridPane layoutX="55.0" layoutY="265.0" prefHeight="264.0" prefWidth="600.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0">
       <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="138.0" minWidth="0.0" prefWidth="70.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="423.0" minWidth="0.0" prefWidth="156.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="164.0" minWidth="0.0" prefWidth="70.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="423.0" minWidth="10.0" prefWidth="150.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="110.0" minWidth="110.0" prefWidth="110.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="190.0" prefWidth="200.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="110.0" minWidth="110.0" prefWidth="110.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="170.0" minWidth="190.0" prefWidth="170.0" />
       </columnConstraints>
       <rowConstraints>
         <RowConstraints maxHeight="100.0" minHeight="32.0" vgrow="SOMETIMES" />
@@ -123,6 +109,7 @@
         <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
       </rowConstraints>
       <children>
         <Label text="Bio :" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
@@ -153,55 +140,126 @@
             <Font name="Times New Roman Bold" size="14.0" />
           </font>
         </Label>
-        <Label fx:id="animSpecLb1" text="Unknown Species" GridPane.columnIndex="1" GridPane.rowIndex="1">
+        <Label fx:id="animalColorLbl" text="No data" GridPane.columnIndex="1" GridPane.rowIndex="1">
           <font>
             <Font name="Times New Roman" size="14.0" />
           </font>
           <GridPane.margin>
-            <Insets left="10.0" />
+            <Insets left="5.0" />
           </GridPane.margin>
         </Label>
-        <Label text="Unkown Breed" GridPane.columnIndex="1" GridPane.rowIndex="2">
+        <Label fx:id="animWeightLb" text="No data" GridPane.columnIndex="1" GridPane.rowIndex="2">
           <font>
             <Font name="Times New Roman" size="14.0" />
           </font>
           <GridPane.margin>
-            <Insets left="10.0" />
+            <Insets left="5.0" />
           </GridPane.margin>
         </Label>
-        <Label text="Unkown Gender" GridPane.columnIndex="1" GridPane.rowIndex="3">
+        <Label fx:id="animHieghtLb" text="No data" GridPane.columnIndex="1" GridPane.rowIndex="3">
           <font>
             <Font name="Times New Roman" size="14.0" />
           </font>
           <GridPane.margin>
-            <Insets left="10.0" />
+            <Insets left="5.0" />
           </GridPane.margin>
         </Label>
-        <Label text="Unknown Age" GridPane.columnIndex="1" GridPane.rowIndex="4">
+        <Label fx:id="animAgressLb" text="No data" GridPane.columnIndex="1" GridPane.rowIndex="4">
           <font>
             <Font name="Times New Roman" size="14.0" />
           </font>
           <GridPane.margin>
-            <Insets left="10.0" />
+            <Insets left="5.0" />
           </GridPane.margin>
         </Label>
-            <TextArea blendMode="LIGHTEN" editable="false" maxHeight="157.0" maxWidth="377.0" prefHeight="100.0" prefWidth="377.0" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.halignment="LEFT" GridPane.valignment="CENTER" />
-            <Label text="Bathroom  " GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
-               <font>
-                  <Font name="Times New Roman Bold" size="14.0" />
-               </font>
-            </Label>
+            <TextArea fx:id="BioText" editable="false" maxHeight="210.0" maxWidth="443.0" prefHeight="210.0" prefWidth="443.0" text="No data" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
+               <GridPane.margin>
+                  <Insets left="5.0" />
+               </GridPane.margin></TextArea>
             <Label GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
                <font>
                   <Font name="Times New Roman Bold" size="14.0" />
                </font>
             </Label>
-            <Label text="Species :" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+            <Label text="Date Arrived :" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
                <font>
                   <Font name="Times New Roman Bold" size="14.0" />
                </font>
             </Label>
-            <Label text="Species :" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+            <Label text="Date Adopted:" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+               <font>
+                  <Font name="Times New Roman Bold" size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="animSpecLb11" text="No data" GridPane.columnIndex="3" GridPane.rowIndex="1">
+               <font>
+                  <Font name="Times New Roman" size="14.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="5.0" />
+               </GridPane.margin>
+            </Label>
+            <Label fx:id="animeAdoptedLb" text="No data" GridPane.columnIndex="3" GridPane.rowIndex="2">
+               <font>
+                  <Font name="Times New Roman" size="14.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="5.0" />
+               </GridPane.margin>
+            </Label>
+            <Label fx:id="animDateArrivedLb" text="No data" GridPane.columnIndex="3" GridPane.rowIndex="3">
+               <font>
+                  <Font name="Times New Roman" size="14.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="5.0" />
+               </GridPane.margin>
+            </Label>
+            <Label fx:id="animDateAdopLb" text="No data" GridPane.columnIndex="3" GridPane.rowIndex="4">
+               <font>
+                  <Font name="Times New Roman" size="14.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="5.0" />
+               </GridPane.margin>
+            </Label>
+            <Label text="Bathroom  " GridPane.halignment="RIGHT" GridPane.rowIndex="5" GridPane.valignment="TOP">
+               <font>
+                  <Font name="Times New Roman Bold" size="14.0" />
+               </font>
+            </Label>
+            <Label text="Trained (1-10) :" GridPane.halignment="RIGHT" GridPane.rowIndex="5" GridPane.valignment="BOTTOM">
+               <font>
+                  <Font name="Times New Roman Bold" size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="animBDayLb" text="No data" GridPane.columnIndex="3" GridPane.rowIndex="5">
+               <font>
+                  <Font name="Times New Roman" size="14.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="5.0" />
+               </GridPane.margin>
+            </Label>
+            <Label fx:id="animBathLb" text="No data" GridPane.columnIndex="1" GridPane.rowIndex="5">
+               <font>
+                  <Font name="Times New Roman" size="14.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="5.0" />
+               </GridPane.margin>
+            </Label>
+            <Label text="Service  " GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
+               <font>
+                  <Font name="Times New Roman Bold" size="14.0" />
+               </font>
+            </Label>
+            <Label text="Adopted :" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+               <font>
+                  <Font name="Times New Roman Bold" size="14.0" />
+               </font>
+            </Label>
+            <Label text="Birthday :" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
                <font>
                   <Font name="Times New Roman Bold" size="14.0" />
                </font>
