--- a/src/animalProfile/AnimalProfile.fxml
+++ b/src/animalProfile/AnimalProfile.fxml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="603.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="619.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="animalProfile.AnimalProfileController">
   <children>
-    <Pane layoutX="55.0" layoutY="57.0" prefHeight="164.0" prefWidth="240.0" style="-fx-background-color: grey;" AnchorPane.bottomAnchor="382.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="410.0" AnchorPane.topAnchor="57.0" />
+    <Pane layoutX="55.0" layoutY="57.0" prefHeight="174.0" prefWidth="233.0" style="-fx-background-color: grey;" AnchorPane.bottomAnchor="388.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="417.0" AnchorPane.topAnchor="57.0" />
     <GridPane layoutX="356.0" layoutY="57.0" prefHeight="164.0" prefWidth="300.0" AnchorPane.rightAnchor="44.0">
       <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.0" minWidth="10.0" prefWidth="83.0" />
@@ -49,54 +51,54 @@
             <Font name="Times New Roman Bold" size="14.0" />
           </font>
         </Label>
-        <Label fx:id="animNameLb" text="No data" GridPane.columnIndex="1" GridPane.halignment="LEFT">
-          <font>
-            <Font name="Times New Roman" size="14.0" />
-          </font>
-          <GridPane.margin>
-            <Insets left="10.0" />
-          </GridPane.margin>
-        </Label>
-        <Label fx:id="animSpeciesLb" text="No data" GridPane.columnIndex="1" GridPane.rowIndex="1">
-          <font>
-            <Font name="Times New Roman" size="14.0" />
-          </font>
-          <GridPane.margin>
-            <Insets left="10.0" />
-          </GridPane.margin>
-        </Label>
-        <Label fx:id="animBreedLb" text="No data" GridPane.columnIndex="1" GridPane.rowIndex="2">
-          <font>
-            <Font name="Times New Roman" size="14.0" />
-          </font>
-          <GridPane.margin>
-            <Insets left="10.0" />
-          </GridPane.margin>
-        </Label>
-        <Label fx:id="AnimGenderLb" text="No data" GridPane.columnIndex="1" GridPane.rowIndex="3">
-          <font>
-            <Font name="Times New Roman" size="14.0" />
-          </font>
-          <GridPane.margin>
-            <Insets left="10.0" />
-          </GridPane.margin>
-        </Label>
         <Label text="ID :" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
           <font>
             <Font name="Times New Roman Bold" size="14.0" />
           </font>
         </Label>
-        <Label fx:id="animIDLb" text="No data" GridPane.columnIndex="1" GridPane.rowIndex="4">
-          <font>
-            <Font name="Times New Roman" size="14.0" />
-          </font>
-          <GridPane.margin>
-            <Insets left="10.0" />
-          </GridPane.margin>
-        </Label>
+            <Text fx:id="animNameText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1">
+               <font>
+                  <Font name="Times New Roman" size="14.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+            </Text>
+            <Text fx:id="animSpeciesText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <font>
+                  <Font name="Times New Roman" size="14.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+            </Text>
+            <Text fx:id="animBreedText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <font>
+                  <Font name="Times New Roman" size="14.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+            </Text>
+            <Text fx:id="animGenderText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <font>
+                  <Font name="Times New Roman" size="14.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+            </Text>
+            <Text fx:id="animIDText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <font>
+                  <Font name="Times New Roman" size="14.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+            </Text>
       </children>
     </GridPane>
-    <GridPane layoutX="55.0" layoutY="265.0" prefHeight="264.0" prefWidth="600.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0">
+    <GridPane layoutX="50.0" layoutY="250.0" prefHeight="264.0" prefWidth="600.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0">
       <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="110.0" minWidth="110.0" prefWidth="110.0" />
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="190.0" prefWidth="200.0" />
@@ -104,12 +106,12 @@
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="170.0" minWidth="190.0" prefWidth="170.0" />
       </columnConstraints>
       <rowConstraints>
-        <RowConstraints maxHeight="100.0" minHeight="32.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="81.0" minHeight="3.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="100.0" minHeight="0.0" prefHeight="100.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="133.0" minHeight="0.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
       </rowConstraints>
       <children>
         <Label text="Bio :" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
@@ -120,7 +122,7 @@
             <Insets />
           </GridPane.margin>
         </Label>
-        <Label text="Weight  :" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+        <Label text="Weight :" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
           <font>
             <Font name="Times New Roman Bold" size="14.0" />
           </font>
@@ -135,141 +137,153 @@
             <Font name="Times New Roman Bold" size="14.0" />
           </font>
         </Label>
-        <Label text="Agression(1-10) :" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+        <Label text="Aggression(1-10) :" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
           <font>
             <Font name="Times New Roman Bold" size="14.0" />
           </font>
         </Label>
-        <Label fx:id="animalColorLbl" text="No data" GridPane.columnIndex="1" GridPane.rowIndex="1">
+        <Label GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+          <font>
+            <Font name="Times New Roman Bold" size="14.0" />
+          </font>
+        </Label>
+        <Label text="Date Arrived :" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+          <font>
+            <Font name="Times New Roman Bold" size="14.0" />
+          </font>
+        </Label>
+        <Label text="Date Adopted:" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+          <font>
+            <Font name="Times New Roman Bold" size="14.0" />
+          </font>
+        </Label>
+        <Label text="Bathroom  " GridPane.halignment="RIGHT" GridPane.rowIndex="5" GridPane.valignment="TOP">
+          <font>
+            <Font name="Times New Roman Bold" size="14.0" />
+          </font>
+        </Label>
+        <Label text="Trained (1-10) :" GridPane.halignment="RIGHT" GridPane.rowIndex="5" GridPane.valignment="BOTTOM">
+          <font>
+            <Font name="Times New Roman Bold" size="14.0" />
+          </font>
+        </Label>
+        <Label text="Service  " GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
+          <font>
+            <Font name="Times New Roman Bold" size="14.0" />
+          </font>
+        </Label>
+        <Label text="Adopted :" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+          <font>
+            <Font name="Times New Roman Bold" size="14.0" />
+          </font>
+        </Label>
+        <Label text="Birthday :" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
+          <font>
+            <Font name="Times New Roman Bold" size="14.0" />
+          </font>
+        </Label>
+        <Label text="Trained (1-10) :" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+          <font>
+            <Font name="Times New Roman Bold" size="14.0" />
+          </font>
+        </Label>
+        <Text fx:id="animBioText" strokeType="OUTSIDE" strokeWidth="0.0" text="No Data" wrappingWidth="430.32421875" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.halignment="LEFT" GridPane.valignment="TOP">
+          <GridPane.margin>
+            <Insets left="10.0" top="1.0" />
+          </GridPane.margin>
+          <font>
+            <Font name="Times New Roman" size="14.0" />
+          </font>
+        </Text>
+        <Text fx:id="animColorText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1" GridPane.rowIndex="1">
           <font>
             <Font name="Times New Roman" size="14.0" />
           </font>
           <GridPane.margin>
-            <Insets left="5.0" />
+            <Insets left="10.0" />
           </GridPane.margin>
-        </Label>
-        <Label fx:id="animWeightLb" text="No data" GridPane.columnIndex="1" GridPane.rowIndex="2">
+        </Text>
+        <Text fx:id="animWeightText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1" GridPane.rowIndex="2">
           <font>
             <Font name="Times New Roman" size="14.0" />
           </font>
           <GridPane.margin>
-            <Insets left="5.0" />
+            <Insets left="10.0" />
           </GridPane.margin>
-        </Label>
-        <Label fx:id="animHieghtLb" text="No data" GridPane.columnIndex="1" GridPane.rowIndex="3">
+        </Text>
+        <Text fx:id="animHeightText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1" GridPane.rowIndex="3">
           <font>
             <Font name="Times New Roman" size="14.0" />
           </font>
           <GridPane.margin>
-            <Insets left="5.0" />
+            <Insets left="10.0" />
           </GridPane.margin>
-        </Label>
-        <Label fx:id="animAgressLb" text="No data" GridPane.columnIndex="1" GridPane.rowIndex="4">
+        </Text>
+        <Text fx:id="animAggressText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1" GridPane.rowIndex="4">
           <font>
             <Font name="Times New Roman" size="14.0" />
           </font>
           <GridPane.margin>
-            <Insets left="5.0" />
+            <Insets left="10.0" />
           </GridPane.margin>
-        </Label>
-            <TextArea fx:id="BioText" editable="false" maxHeight="210.0" maxWidth="443.0" prefHeight="210.0" prefWidth="443.0" text="No data" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
-               <GridPane.margin>
-                  <Insets left="5.0" />
-               </GridPane.margin></TextArea>
-            <Label GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
-               <font>
-                  <Font name="Times New Roman Bold" size="14.0" />
-               </font>
-            </Label>
-            <Label text="Date Arrived :" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
-               <font>
-                  <Font name="Times New Roman Bold" size="14.0" />
-               </font>
-            </Label>
-            <Label text="Date Adopted:" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
-               <font>
-                  <Font name="Times New Roman Bold" size="14.0" />
-               </font>
-            </Label>
-            <Label fx:id="animSpecLb11" text="No data" GridPane.columnIndex="3" GridPane.rowIndex="1">
-               <font>
-                  <Font name="Times New Roman" size="14.0" />
-               </font>
-               <GridPane.margin>
-                  <Insets left="5.0" />
-               </GridPane.margin>
-            </Label>
-            <Label fx:id="animeAdoptedLb" text="No data" GridPane.columnIndex="3" GridPane.rowIndex="2">
-               <font>
-                  <Font name="Times New Roman" size="14.0" />
-               </font>
-               <GridPane.margin>
-                  <Insets left="5.0" />
-               </GridPane.margin>
-            </Label>
-            <Label fx:id="animDateArrivedLb" text="No data" GridPane.columnIndex="3" GridPane.rowIndex="3">
-               <font>
-                  <Font name="Times New Roman" size="14.0" />
-               </font>
-               <GridPane.margin>
-                  <Insets left="5.0" />
-               </GridPane.margin>
-            </Label>
-            <Label fx:id="animDateAdopLb" text="No data" GridPane.columnIndex="3" GridPane.rowIndex="4">
-               <font>
-                  <Font name="Times New Roman" size="14.0" />
-               </font>
-               <GridPane.margin>
-                  <Insets left="5.0" />
-               </GridPane.margin>
-            </Label>
-            <Label text="Bathroom  " GridPane.halignment="RIGHT" GridPane.rowIndex="5" GridPane.valignment="TOP">
-               <font>
-                  <Font name="Times New Roman Bold" size="14.0" />
-               </font>
-            </Label>
-            <Label text="Trained (1-10) :" GridPane.halignment="RIGHT" GridPane.rowIndex="5" GridPane.valignment="BOTTOM">
-               <font>
-                  <Font name="Times New Roman Bold" size="14.0" />
-               </font>
-            </Label>
-            <Label fx:id="animBDayLb" text="No data" GridPane.columnIndex="3" GridPane.rowIndex="5">
-               <font>
-                  <Font name="Times New Roman" size="14.0" />
-               </font>
-               <GridPane.margin>
-                  <Insets left="5.0" />
-               </GridPane.margin>
-            </Label>
-            <Label fx:id="animBathLb" text="No data" GridPane.columnIndex="1" GridPane.rowIndex="5">
-               <font>
-                  <Font name="Times New Roman" size="14.0" />
-               </font>
-               <GridPane.margin>
-                  <Insets left="5.0" />
-               </GridPane.margin>
-            </Label>
-            <Label text="Service  " GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
-               <font>
-                  <Font name="Times New Roman Bold" size="14.0" />
-               </font>
-            </Label>
-            <Label text="Adopted :" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
-               <font>
-                  <Font name="Times New Roman Bold" size="14.0" />
-               </font>
-            </Label>
-            <Label text="Birthday :" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
-               <font>
-                  <Font name="Times New Roman Bold" size="14.0" />
-               </font>
-            </Label>
-            <Label text="Trained (1-10) :" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
-               <font>
-                  <Font name="Times New Roman Bold" size="14.0" />
-               </font>
-            </Label>
+        </Text>
+        <Text fx:id="animBathroomText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1" GridPane.rowIndex="5">
+          <font>
+            <Font name="Times New Roman" size="14.0" />
+          </font>
+          <GridPane.margin>
+            <Insets left="10.0" />
+          </GridPane.margin>
+        </Text>
+        <Text fx:id="animServiceText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="3" GridPane.rowIndex="1">
+          <font>
+            <Font name="Times New Roman" size="14.0" />
+          </font>
+          <GridPane.margin>
+            <Insets left="10.0" />
+          </GridPane.margin>
+        </Text>
+        <Text fx:id="animAdoptedText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="3" GridPane.rowIndex="2">
+          <font>
+            <Font name="Times New Roman" size="14.0" />
+          </font>
+          <GridPane.margin>
+            <Insets left="10.0" />
+          </GridPane.margin>
+        </Text>
+        <Text fx:id="animDateArrivedText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="3" GridPane.rowIndex="3">
+          <font>
+            <Font name="Times New Roman" size="14.0" />
+          </font>
+          <GridPane.margin>
+            <Insets left="10.0" />
+          </GridPane.margin>
+        </Text>
+        <Text fx:id="animDateAdoptedText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="3" GridPane.rowIndex="4">
+          <font>
+            <Font name="Times New Roman" size="14.0" />
+          </font>
+          <GridPane.margin>
+            <Insets left="10.0" />
+          </GridPane.margin>
+        </Text>
+        <Text fx:id="animBirthdayText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="3" GridPane.rowIndex="5">
+          <font>
+            <Font name="Times New Roman" size="14.0" />
+          </font>
+          <GridPane.margin>
+            <Insets left="10.0" />
+          </GridPane.margin>
+        </Text>
+
       </children>
     </GridPane>
+      <ButtonBar buttonMinWidth="0.0" layoutX="125.0" layoutY="553.0" prefHeight="40.0" prefWidth="450.0" style="-fx-background-color: lightgrey;">
+        <buttons>
+            <Button fx:id="editAnimalBtn" mnemonicParsing="false" onAction="#goToEdit" snapToPixel="false" text="Edit Profile" translateX="-100.0" />
+            <Button fx:id="returnBtn" mnemonicParsing="false" onAction="#returnToMenu" text="Return to Menu" translateX="-65.0" />
+          <Button fx:id="adoptBtn" mnemonicParsing="false" onAction="#goToAdoptionPage" text="Adopt!" translateX="-30.0" />
+        </buttons>
+      </ButtonBar>
   </children>
 </AnchorPane>
