--- a/src/animalList/AnimalList.fxml
+++ b/src/animalList/AnimalList.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="animalList.AnimalListController">
    <children>
       <TextField layoutX="27.0" layoutY="25.0" promptText="Search..." />
       <Button layoutX="224.0" layoutY="25.0" mnemonicParsing="false" text="Go" />
@@ -27,6 +27,7 @@
             </TableView>
          </children>
       </Pane>
-      <Button fx:id="returnToMain" layoutX="341.0" layoutY="25.0" mnemonicParsing="false" text="Return to Main Menu" />
+      <Button fx:id="returnToMain" layoutX="341.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToMainMenu" text="Return to Main Menu" />
+      <Button fx:id="testSelectBtn" layoutX="418.0" layoutY="354.0" mnemonicParsing="false" onAction="#goToAnimalAdoption" text="Test select animal" />
    </children>
 </AnchorPane>
