--- a/src/animalList/AnimalList.fxml
+++ b/src/animalList/AnimalList.fxml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
@@ -12,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="animalList.AnimalListController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="animalList.AnimalListController">
    <children>
       <TextField layoutX="27.0" layoutY="25.0" promptText="Search..." />
       <Button layoutX="224.0" layoutY="25.0" mnemonicParsing="false" text="Go" />
@@ -21,7 +18,7 @@
       <Button layoutX="264.0" layoutY="81.0" mnemonicParsing="false" text="Apply Filter" />
       <Pane layoutX="30.0" layoutY="128.0" prefHeight="217.0" prefWidth="541.0">
          <children>
-            <TableView fx:id="animalsTableView" layoutX="17.0" layoutY="14.0" prefHeight="200.0" prefWidth="508.0">
+            <TableView fx:id="animalsTableView" layoutX="17.0" layoutY="14.0" onMouseClicked="#selectAnimal" prefHeight="200.0" prefWidth="508.0">
               <columns>
                 <TableColumn fx:id="nameColumn" prefWidth="161.0" text="Name" />
                 <TableColumn fx:id="speciesColumn" minWidth="0.0" prefWidth="182.0" text="Species" />
@@ -31,5 +28,7 @@
          </children>
       </Pane>
       <Button fx:id="returnToMain" layoutX="341.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToMainMenu" text="Return to Main Menu" />
+      <Button fx:id="selectedAnimalButton" layoutX="356.0" layoutY="353.0" mnemonicParsing="false" onAction="#goToAnimalProfile" text="Go to Selected Animal's Page" />
+      <Button fx:id="editAnimalButton" layoutX="68.0" layoutY="353.0" mnemonicParsing="false" onAction="#createAnimal" text="Create an Animal Profile" />
    </children>
 </AnchorPane>
